[gd_scene load_steps=10 format=3 uid="uid://7gkxfsran1js"]

[ext_resource type="Theme" uid="uid://bv8atq67jgwrc" path="res://src/global_theme.tres" id="1_vfw02"]
[ext_resource type="Script" uid="uid://20xcdy1as0gh" path="res://src/systems/utils/meta.gd" id="2_y1npw"]
[ext_resource type="StyleBox" uid="uid://bjhs4pk2gmdg4" path="res://src/ui/panel_default.tres" id="3_8mxkv"]
[ext_resource type="Script" uid="uid://dhvrb58iweuo0" path="res://src/ui/gui/gui_button.gd" id="4_y8kf0"]
[ext_resource type="Shader" uid="uid://bhdcejnx8m6be" path="res://src/shaders/ui/button_texture_grad_mask.gdshader" id="5_ymjtf"]
[ext_resource type="LabelSettings" uid="uid://dbxux4dchsxxt" path="res://src/global_label_settings.tres" id="6_cy2o0"]
[ext_resource type="Script" uid="uid://sptd6yjcf24k" path="res://src/ui/abstract_button.gd" id="7_apoow"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ddb6d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y8kf0"]
shader = ExtResource("5_ymjtf")
shader_parameter/first_color = Color(0, 0, 0, 1)
shader_parameter/second_color = Color(0, 0, 0, 0)
shader_parameter/position = 0.0
shader_parameter/size = 1.0
shader_parameter/angle = 0.0

[node name="credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_vfw02")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.88)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = 8.0
offset_right = -14.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_8mxkv")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="code" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
mouse_filter = 2

[node name="Label" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/code"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 10
text = "Code & Art:"
fit_content = true
scroll_active = false

[node name="Label2" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/code"]
layout_mode = 2
mouse_default_cursor_shape = 2
bbcode_enabled = true
text = "-> thissmay ([url=https://twitter.com/thissmay_too]https://twitter.com/thissmay_too[/url])"
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("2_y1npw")

[node name="music" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
mouse_filter = 2

[node name="Label" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/music"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 10
text = "Music:"
fit_content = true
scroll_active = false

[node name="Label2" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/music"]
layout_mode = 2
mouse_default_cursor_shape = 2
bbcode_enabled = true
text = "-> thissmay ([url=https://twitter.com/thissmay_too]https://twitter.com/thissmay_too[/url])
-> Luff ([url=https://linktr.ee/xluffx]https://linktr.ee/xluffx[/url])
-> Silas.Roe ([url=https://linktr.ee/silas.roe/]https://linktr.ee/silas.roe[/url])
-> Madoxy ([url=https://madoxy.neocities.org/]https://madoxy.neocities.org/[/url])
-> -1 ([url=https://youtube.com/@-1_void]https://youtube.com/@-1_void/[/url])
-> poubuts"
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("2_y1npw")

[node name="se" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
mouse_filter = 2

[node name="Label" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/se"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 10
text = "Sound Effects & Ambience:"
fit_content = true
scroll_active = false

[node name="Label2" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/se"]
layout_mode = 2
mouse_default_cursor_shape = 2
bbcode_enabled = true
text = "-> [url=Freesound.org]Freesound.org[/url]"
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("2_y1npw")

[node name="images" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
mouse_filter = 2

[node name="Label" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/images"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 10
text = "Panorama Images & Other Images."
fit_content = true
scroll_active = false

[node name="Label2" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/images"]
layout_mode = 2
mouse_default_cursor_shape = 2
bbcode_enabled = true
text = "-> Pexels ([url=https://www.pexels.com]https://www.pexels.com/[/url])
-> Pixabay ([url=https://pixabay.com]https://pixabay.com[/url])"
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("2_y1npw")

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="special_thanks" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
mouse_filter = 2

[node name="Label" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/special_thanks"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 10
text = "Special Thanks!:"
fit_content = true
scroll_active = false

[node name="Label2" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/special_thanks"]
layout_mode = 2
mouse_default_cursor_shape = 2
bbcode_enabled = true
text = "-> aubrey
-> koala
-> floofinator
-> peppersalt"
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("2_y1npw")

[node name="GUIPanelButton" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer" node_paths=PackedStringArray("abstract_button", "display_bg", "main_container", "inner_main_container", "icon_content_seperator", "margin_container", "icon_display_container", "icon_display", "text_display")]
custom_minimum_size = Vector2(60, 18)
layout_mode = 2
focus_mode = 2
mouse_filter = 1
theme = ExtResource("1_vfw02")
script = ExtResource("4_y8kf0")
button_display_texture = SubResource("CanvasTexture_ddb6d")
abstract_button = NodePath("main_container/abstract_button")
display_bg = NodePath("main_container/display_bg")
main_container = NodePath("main_container")
inner_main_container = NodePath("main_container/margin_container/icon_content_seperator/inner_main_container")
icon_content_seperator = NodePath("main_container/margin_container/icon_content_seperator")
margin_container = NodePath("main_container/margin_container")
icon_display_container = NodePath("main_container/margin_container/icon_content_seperator/icon_display_container")
icon_display = NodePath("main_container/margin_container/icon_content_seperator/icon_display_container/icon_display")
text_display = NodePath("main_container/margin_container/icon_content_seperator/inner_main_container/text_display")
metadata/_custom_type_script = "uid://dhvrb58iweuo0"

[node name="main_container" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GUIPanelButton"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="display_bg" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/GUIPanelButton/main_container"]
material = SubResource("ShaderMaterial_y8kf0")
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2

[node name="margin_container" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GUIPanelButton/main_container"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="icon_content_seperator" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GUIPanelButton/main_container/margin_container"]
layout_mode = 2
mouse_filter = 2

[node name="icon_display_container" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GUIPanelButton/main_container/margin_container/icon_content_seperator"]
layout_mode = 2
mouse_filter = 2

[node name="icon_display" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/GUIPanelButton/main_container/margin_container/icon_content_seperator/icon_display_container"]
layout_mode = 2
mouse_filter = 2

[node name="inner_main_container" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GUIPanelButton/main_container/margin_container/icon_content_seperator"]
layout_mode = 2
mouse_filter = 2

[node name="text_display" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GUIPanelButton/main_container/margin_container/icon_content_seperator/inner_main_container"]
layout_mode = 2
text = "Go Back."
label_settings = ExtResource("6_cy2o0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="abstract_button" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/GUIPanelButton/main_container" node_paths=PackedStringArray("button")]
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
script = ExtResource("7_apoow")
button = NodePath("button")

[node name="button" type="BaseButton" parent="PanelContainer/MarginContainer/VBoxContainer/GUIPanelButton/main_container/abstract_button"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 2
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
tooltip_text = ""
tooltip_auto_translate_mode = 0
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 1
focus_behavior_recursive = 0
mouse_filter = 0
mouse_behavior_recursive = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 2
accessibility_name = ""
accessibility_description = ""
accessibility_live = 0
accessibility_controls_nodes = Array[NodePath]([])
accessibility_described_by_nodes = Array[NodePath]([])
accessibility_labeled_by_nodes = Array[NodePath]([])
accessibility_flow_to_nodes = Array[NodePath]([])
theme = null
theme_type_variation = &""
disabled = false
toggle_mode = false
button_pressed = false
action_mode = 1
button_mask = 1
keep_pressed_outside = false
button_group = null
shortcut = null
shortcut_feedback = true
shortcut_in_tooltip = true
script = null
